revenuecat-2022-12-1/v3.2/Getting Started/subscriber-attributes.md
---
title: "Subscriber Attributes"
slug: "subscriber-attributes"
excerpt: "Adding custom properties to users in RevenueCat"
hidden: false
metadata: 
  title: "Subscriber Attributes – RevenueCat"
  description: "Subscriber attributes are useful for storing additional, structured information on a user. For example, you could store your user's email address and additional system identifiers directly in RevenueCat."
  image: 
    0: "https://files.readme.io/bc123e9-OG_image.png"
    1: "OG image.png"
    2: 1200
    3: 627
    4: "#e9acb0"
createdAt: "2020-03-02T07:47:34.104Z"
updatedAt: "2022-01-05T18:01:46.025Z"
---
Subscriber attributes are useful for storing additional, structured information on a user. For example, you could store your user's email address and additional system identifiers directly in RevenueCat. Attributes will not be seen by your users unless you choose to explicitly show them yourself.
[block:callout]
{
  "type": "info",
  "body": "Subscriber attributes are only synced with RevenueCat servers on app launch, app backgrounded, and when purchases are made or restored."
}
[/block]
# Setting Attributes

Subscriber attributes can be set through the Purchases SDK by passing a dictionary of strings to the `setAttributes()` method on the shared Purchases instance. 
[block:code]
{
  "codes": [
    {
      "code": "Purchases.shared.setAttributes([\"age\" : \"24\", \n                             \"custom_group_id\" : \"abc123\"])",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "[[RCPurchases sharedPurchases] setAttributes:@{\n    @\"age\": @\"24\",\n    @\"custom_group_id\": @\"abc123\"\n}];\n    ",
      "language": "objectivec",
      "name": "Objective-C"
    },
    {
      "code": "Purchases.sharedInstance.setAttributes(mapOf(\"age\" to \"24\", \"custom_group_id\" to \"abc123\"))",
      "language": "kotlin",
      "name": "Kotlin"
    },
    {
      "code": "Map<String, String> attributes = new HashMap<String, String>();\nattributes.put(\"age\", \"24\");\nattributes.put(\"custom_group_id\", \"abc123\");\n\nPurchases.getSharedInstance().setAttributes(attributes);",
      "language": "java",
      "name": "Java"
    },
    {
      "code": "Purchases.setAttributes({ \"age\" : \"24\", \"custom_group_id\" : \"abc123\" });",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setAttributes({ \"age\" : \"24\", \"custom_group_id\" : \"abc123\" });",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "warning",
  "body": "Since subscriber attributes are writable using a [public key](doc:authentication) they should not be used for managing secure or sensitive information such as subscription status, coins, etc.",
  "title": ""
}
[/block]
## Restrictions
You can specify up to 50 attributes, with key names up to 40 characters long and values up to 500 characters long. Keys cannot start with `$` unless it's for one of the reserved attributes below.

**Attribute key checklist:**
✅ Key does not contain whitespace
✅ Key must start with a letter for non-reserved attributes or "$" for reserved attributes
✅ Key does not include any non-alphanumeric characters except `-` and `_`
✅ Key is not more than 40 characters
✅ Value is not more than 500 characters
✅ No more than 50 custom attributes


## Reserved attributes
Attribute keys beginning with `$` are reserved for RevenueCat. The current list of reserved keys are below:

### General
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "0-0": "`$email`",
    "0-1": "Email address for the user",
    "1-0": "`$displayName`",
    "1-1": "Name that should be used to reference the user",
    "2-0": "`$phoneNumber`",
    "2-1": "Phone number for the user",
    "3-0": "`$apnsTokens`",
    "3-1": "Apple push notification tokens for the user",
    "4-0": "`$fcmTokens`",
    "4-1": "Google push notification tokens for the user"
  },
  "cols": 2,
  "rows": 5
}
[/block]
### Device Identifiers
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "0-0": "`$idfa`",
    "1-0": "`$idfv`",
    "2-0": "`$gpsAdId`",
    "3-0": "`$androidId`",
    "0-1": "Apple advertising identifier",
    "1-1": "Apple vendor identifier",
    "2-1": "Google advertising identifier",
    "3-1": "Android device identifier"
  },
  "cols": 2,
  "rows": 4
}
[/block]

[block:callout]
{
  "type": "info",
  "body": "Once a device identifier is set for a subscriber, it can't be changed in order to keep these identifiers associated with the original installation. This allows RevenueCat to send events generated by a particular device to downstream integrations with a consistent identifier unaffected by uninstalls and reinstalls.",
  "title": "Device identifiers can't be changed once set"
}
[/block]
### Third-party Identifiers
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "0-0": "`$adjustId`",
    "0-1": "[Adjust](https://www.adjust.com/) user identifier",
    "1-0": "`$appsflyerId`",
    "1-1": "[Appsflyer](https://www.appsflyer.com/) user identifier",
    "2-0": "`$fbAnonId`",
    "2-1": "[Facebook SDK](https://developers.facebook.com/docs/apis-and-sdks/) anonymous user identifier",
    "3-0": "`$mparticleId`",
    "3-1": "[mParticle](https://www.mparticle.com/) user identifier",
    "4-0": "`$onesignalId`",
    "4-1": "[OneSignal](https://onesignal.com/) player identifier",
    "5-0": "`$airshipChannelId`",
    "5-1": "[Airship](https://www.airship.com) channel identifier"
  },
  "cols": 2,
  "rows": 6
}
[/block]
### Braze User Alias Object
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "0-0": "`$brazeAliasName`",
    "0-1": "Braze 'alias_name' in [User Alias Object](https://www.braze.com/docs/api/objects_filters/user_alias_object/)",
    "1-0": "`$brazeAliasLabel`",
    "1-1": "Braze 'alias_label' in [User Alias Object](https://www.braze.com/docs/api/objects_filters/user_alias_object/)"
  },
  "cols": 2,
  "rows": 2
}
[/block]
### Attribution Data
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "0-0": "`$mediaSource`",
    "1-0": "`$campaign`",
    "2-0": "`$adGroup`",
    "3-0": "`$ad`",
    "4-0": "`$keyword`",
    "5-0": "`$creative`"
  },
  "cols": 1,
  "rows": 6
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "",
  "body": "If you have access to install attribution data, you can set it using the reserved keys above. RevenueCat itself is not an attribution network and can not automatically populate this information."
}
[/block]
Reserved attributes can be written directly by setting the key (don't forget the `$` prefix) or with special helper methods:
[block:code]
{
  "codes": [
    {
      "code": "Purchases.shared.setEmail(\"test@example.com\")\nPurchases.shared.setPhoneNumber(\"+16505551234\")\nPurchases.shared.setDisplayName(\"John Appleseed\")",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "Purchases.sharedInstance.setEmail(\"test@example.com\")\nPurchases.sharedInstance.setPhoneNumber(\"+16505551234\")\nPurchases.sharedInstance.setDisplayName(\"John Appleseed\")",
      "language": "kotlin",
      "name": "Kotlin"
    },
    {
      "code": "Purchases.setEmail(\"test@example.com\")\nPurchases.setPhoneNumber(\"+16505551234\")\nPurchases.setDisplayName(\"John Appleseed\")",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setEmail(\"test@example.com\")\nPurchases.setPhoneNumber(\"+16505551234\")\nPurchases.setDisplayName(\"John Appleseed\")",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]
## Setting push tokens
Push tokens can be used to engage with your users through Apple apns or Google cloud messaging. These can be saved in RevenueCat through system callbacks after the user accepts the push notification permissions in your app.
[block:code]
{
  "codes": [
    {
      "code": "func application(_ application: UIApplication, didRegisterForRemoteNotificationsWithDeviceToken deviceToken: Data) {\n    Purchases.shared.setPushToken(deviceToken)\n}",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "Purchases.sharedInstance.setPushToken(deviceToken)",
      "language": "kotlin",
      "name": "Kotlin"
    },
    {
      "code": "Purchases.setPushToken(deviceToken);",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setPushToken(deviceToken)",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]
# Deleting Attributes

Any attribute can be cleared by passing `null` or an empty string as the key value. Individual attributes can also be cleared for a specific user in their [customer view](doc:customers).
[block:code]
{
  "codes": [
    {
      "code": "Purchases.shared.setAttributes([\"age\" : \"\"])",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "Purchases.sharedInstance.setAttributes(mapOf(\"age\" to \"\"))",
      "language": "kotlin",
      "name": "Kotlin"
    },
    {
      "code": "Purchases.setAttributes({\"age\" : \"\"});",
      "language": "javascript",
      "name": "Flutter"
    },
    {
      "code": "Purchases.setAttributes({\"age\" : \"\"})",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]
# Reading Attributes

You can access subscriber attributes through the [REST API](https://docs.revenuecat.com/reference) using a secret key, in [webhooks](doc:webhooks), and through analytics integrations ([Amplitude](doc:amplitude), [Mixpanel](doc:mixpanel), [Segment](doc:segment)). The [customer view dashboard](doc:customers) will also show a list of attributes for the individual user that you can edit.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/61b62dc-Screen_Shot_2020-03-20_at_5.30.55_PM.png",
        "Screen Shot 2020-03-20 at 5.30.55 PM.png",
        363,
        362,
        "#f8f8f8"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "body": "Subscriber attributes are write-only from the *Purchases SDK*. Reading attributes should only be done server-side through the webhooks or REST API.\n\nSubscriber attributes are also included with transaction data for [ETL exports](https://docs.revenuecat.com/docs/etl-exports)."
}
[/block]
# Next Steps

* Enrich your app by [reacting to the user's current subscription status :fa-arrow-right:](doc:purchaserinfo)